--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/imgs/icons/favicon_16x16_next.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/imgs/icons/favicon_32_32_next.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/imgs/icons/apple_touch_icon_next.png">
-<meta itemprop="name" content="Syr1o的个人主页" />
-<meta itemprop="description" content="测试开发工程师/python" />
+<meta itemprop="name" content="Syr1o‘s Blog" />
+<meta itemprop="description" content="click engineer｜python" />
 <meta itemprop="image" content="https://Syr1o.github.io/imgs/%E5%A4%B4%E5%83%8F.png" />
 <meta itemprop="keywords" content="" />
 
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Syr1o的个人主页" />
-<meta property="og:description" content="测试开发工程师/python" />
+<meta property="og:title" content="Syr1o‘s Blog" />
+<meta property="og:description" content="click engineer｜python" />
 <meta property="og:image" content="/imgs/头像.png" />
 <meta property="og:image:width" content="312" />
 <meta property="og:image:height" content="312" />
 <meta property="og:image:type" content="image/jpeg/png/svg/jpg" />
 <meta property="og:url" content="https://Syr1o.github.io/"/>
-<meta property="og:site_name" content="Syr1o的个人主页" />
+<meta property="og:site_name" content="Syr1o‘s Blog" />
 <meta property="og:locale" content="zh-CN"/>
 
 
@@ -41,7 +41,7 @@
   <script charset="UTF-8" id="LA_COLLECT" src="https://sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id: "",ck: "",autoTrack:true})</script>
 
-  <title>Syr1o的个人主页</title>
+  <title>Syr1o‘s Blog</title>
   <noscript>
     <link rel="stylesheet" href="/css/noscript.css">
   </noscript>
@@ -65,7 +65,7 @@
 
     <a href="/" class="brand" rel="start">
       <i class="logo-line"></i>
-      <h1 class="site-title">Syr1o的个人主页</h1>
+      <h1 class="site-title">Syr1o‘s Blog</h1>
       <i class="logo-line"></i>
     </a>
     
@@ -123,7 +123,7 @@
     <img class="site-author-image" itemprop="image" alt="Syr1o"
       src="/imgs/%e5%a4%b4%e5%83%8f.png">
   <p class="site-author-name" itemprop="name">Syr1o</p>
-  <div class="site-description" itemprop="description">测试开发工程师/python</div>
+  <div class="site-description" itemprop="description">click engineer｜python</div>
 </div>
 <div class="site-state-wrap site-overview-item animated">
   <nav class="site-state">
@@ -200,7 +200,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="欢迎加入 Hugo NexT 组织！">
@@ -283,7 +283,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="世界，你好！">
@@ -363,7 +363,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="文章目录导航">
@@ -425,7 +425,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="Hugo 内置的 Chroma 语法高亮">
@@ -492,7 +492,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="支持 Emoji 表情">
@@ -569,7 +569,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="Markdown 语法支持">
@@ -631,7 +631,7 @@
     </span>
     <span hidden itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
       <meta itemprop="name" content="Syr1o">
-      <meta itemprop="description" content="测试开发工程师/python">
+      <meta itemprop="description" content="click engineer｜python">
     </span>
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="记一次macos系统hugo搭建过程">
@@ -721,7 +721,7 @@
 
 
 
-<script type="text/javascript" src="/js/hugo-next.min.1112741b427344853c9a193fb8f40d2da7c4491bf421d359351b8bde34837cb7.js" defer></script> 
+<script type="text/javascript" src="/js/hugo-next.min.f739832f164064b6df0f2b6c2effccf72038a9247bd7299b00c1bd2fc443f210.js" defer></script> 
 </body>
 
 </html>
